Replace  Sobol_G_setting with test_function_setting

--- a/apply/plotting.ipynb
+++ b/apply/plotting.ipynb
@@ -36,7 +36,7 @@
     "import seaborn as sns\n",
     "# read Sobol' sensitivity indices as dataframe\n",
     "from settings import *\n",
-    "from utils.Sobol_G_setting import set_sobol_g_func\n",
+    "from utils.test_function_setting import set_sobol_g_func\n",
     "from pandas.core.common import flatten\n",
     "from matplotlib.ticker import (MultipleLocator, FormatStrFormatter,\n",
     "                               AutoMinorLocator)"
